# mrok

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  dev.Dockerfile  docker-compose.yaml  env.example  prod.Dockerfile  pyproject.toml  settings.yaml  settings.yaml.sample  snapshot_report.html  sonar-project.properties
.github/workflows/: notify-pr-closed.yaml  notify-pr-reviewed.yml  pr-build-merge.yaml  release.yml
app/: app.py  cli.py  conf.py
app/clients/: base.py  ziti.py
app/commands/: __init__.py  bootstrap.py
charts/: README.md
charts/mrok-controller/: Chart.yaml  values.yaml
charts/mrok-controller/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
charts/mrok-frontend/: Chart.yaml  values.yaml
charts/mrok-frontend/templates/: configmap.yaml  deployment.yaml  secret.yaml
errors/: error_template.html  error_template.json
errors/contrib_softwareone/: error_template.html  error_template.min.html
mrok/: __init__.py  conf.py  constants.py  datastructures.py  errors.py  logging.py  master.py  metrics.py
mrok/agent/: sidecar.py  ziticorn.py
mrok/agent/devtools/: __main__.py
mrok/agent/devtools/inspector/: __main__.py  app.py  server.py  utils.py
mrok/agent/sidecar/: __init__.py  app.py  inspector.py  main.py  store.py
mrok/authentication/: __init__.py  base.py  credentials.py  manager.py  registry.py
mrok/authentication/backends/: jwt.py  oidc.py
mrok/cli/: __init__.py  logging.py  main.py  rich.py  utils.py
mrok/cli/commands/: __init__.py
mrok/cli/commands/admin/: __init__.py  bootstrap.py  utils.py
mrok/cli/commands/admin/list/: __init__.py  extensions.py  instances.py
mrok/cli/commands/admin/register/: __init__.py  extensions.py  instances.py
mrok/cli/commands/admin/unregister/: __init__.py  extensions.py  instances.py
mrok/cli/commands/agent/: __init__.py  utils.py
mrok/cli/commands/agent/dev/: __init__.py  console.py  web.py
mrok/cli/commands/agent/run/: __init__.py  asgi.py  sidecar.py
mrok/cli/commands/controller/: __init__.py  openapi.py  run.py
mrok/cli/commands/frontend/: __init__.py  run.py
mrok/cli/commands/proxy/: __init__.py  run.py
mrok/controller/: app.py  auth.py  fastapi_auth_adapter.py  pagination.py  routes.py  schemas.py
mrok/controller/auth/: __init__.py  backends.py  base.py  manager.py  registry.py
mrok/controller/dependencies/: __init__.py  auth.py  conf.py  ziti.py
mrok/controller/openapi/: __init__.py  examples.py  utils.py
mrok/controller/routes/: extensions.py  instances.py
mrok/frontend/: __init__.py  app.py  asgi_auth_adapter.py  main.py  middleware.py  utils.py
mrok/http/: config.py  constants.py  forwarder.py  lifespan.py  master.py  middlewares.py  pool.py  protocol.py  types.py  utils.py
mrok/proxy/: __init__.py  app.py  asgi.py  backend.py  config.py  dataclasses.py  datastructures.py  event_publisher.py  events.py  exceptions.py  lifespan.py  main.py  master.py  metrics.py  middleware.py  middlewares.py  models.py  server.py  stream.py  streams.py  types.py  utils.py  worker.py  ziti.py  ziticorn.py
mrok/types/: proxy.py  ziti.py
mrok/ziti/: __init__.py  api.py  bootstrap.py  constants.py  errors.py  identities.py  pki.py  services.py
scripts/: ziti.sh
tests/: conftest.py  types.py
tests/agent/: test_ziticorn.py
tests/agent/devtools/inspector/: test_app.py  test_server.py  test_utils.py
tests/agent/sidecar/: test_app.py  test_inspector.py  test_main.py  test_store.py
tests/cli/: test_main.py
tests/cli/admin/: test_bootstrap.py  test_list.py  test_register.py  test_unregister.py  test_utils.py
tests/cli/agent/: test_dev.py  test_run.py  test_utils.py
tests/cli/controller/: test_openapi.py  test_run.py
tests/cli/frontend/: test_run.py
tests/cli/proxy/: test_run.py
tests/controller/: test_asgi_adapter.py  test_auth.py  test_credentials.py  test_extensions.py  test_fastapi_adapter.py  test_instances.py  test_manager.py  test_openapi.py
tests/frontend/: test_app.py  test_main.py  test_middleware.py  test_utils.py
tests/http/: test_config.py  test_forwarder.py  test_lifespan.py  test_master.py  test_protocol.py  test_server.py
tests/proxy/: test_app.py  test_asgi.py  test_backend.py  test_config.py  test_event_publisher.py  test_lifespan.py  test_master.py  test_metrics.py  test_middleware.py  test_middlewares.py  test_models.py  test_protocol.py  test_server.py  test_stream.py  test_streams.py  test_worker.py  test_ziti.py  test_ziti_branches.py
tests/ziti/: test_api.py  test_bootstrap.py  test_identities.py  test_pki.py  test_services.py
